# er_for_nocturne

./: .gitignore  README.md  pyproject.toml
assets/raw_text/: ui.json
assets/translated_text/: ui.json
src/er/: __main__.py  main.py
src/er/checker/: misc.py
src/er/cli/: core.py  testfile.py  translate.py
src/er/core/: config.py  gal_json.py  gal_text_t.py  text_hook.py
src/er/core/pipeline/: exe_textract.py  (+3 more)
src/er/processor/: ascii_to_fullwidth.py  auto_wrap.py  mapping.py  misc.py
src/er/utils/: binary.py  compatibility.py  console.py  fs.py  instructions.py  misc.py
workspace/: nocturne.json  人名替换表.toml  项目GPT字典.toml
workspace/raw/: bdendai1.json  bdendai2.json  bdendai3.json  bdendra1.json  bdendra2.json  bdendru1.json  bdendru2.json  bdendru3.json  bdendru4.json  bdendru5.json  bdendsh1.json  bdendsh2.json  bdendsh3.json  bdendsh4.json  bdendsh5.json  init.json  rumiend1.json  snr01m.json  snr02m.json  snr03m.json  snr05m.json  snr07m.json  snr08m.json  snr09m.json  snr10m.json  snr11m.json  snr12m.json  snr14m.json  snr15m.json  snr15s.json  snr16m.json  snr16s.json  snr17s.json  snr18s.json  snr19am.json  snr19ba.json  snr19br.json  snr19s.json  snr20s.json  snr22aa.json  (+29 more)
workspace/script/: bdendai1  bdendai2  bdendai3  bdendra1  bdendra2  bdendru1  bdendru2  bdendru3  bdendru4  bdendru5  bdendsh1  bdendsh2  bdendsh3  bdendsh4  bdendsh5  init  rumiend1  snr01m  snr02m  snr03m  snr05m  snr07m  snr08m  snr09m  snr10m  snr11m  snr12m  snr14m  snr15m  snr15s  snr16m  snr16s  snr17s  snr18s  snr19am  snr19ba  snr19br  snr19s  snr20s  snr22aa  (+29 more)
